# olfactory-navigation

./: .gitignore  404.html  LICENSE  README  README.md  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  conda-publish.yml  pypi-publish.yml
agent_creation/: index.html
conda-recipe/: meta.yaml
docs/: agent_creation.md  analyze_res.html  analyze_results.js  gen_ref_pages.py  index.md  res_analysis.md  simulation_process.md
docs/tutorials/: agent_description.md  available_tests.md  simulation_process.md
experiments/: Simulations-s_55_247-n_2393-20240717_232141-horizon_1000-analysis.csv  compare_agents.ipynb  infotaxis_agent_training.ipynb  modelBasedTrain.py  modelFreeTrain.py  pomdp_agent_layered_model.ipynb  pomdp_agent_robustness_test.ipynb  pomdp_agent_simplified_model.ipynb  pomdp_agent_training.ipynb  q_agent_training.ipynb  q_learning_comparisson.ipynb  q_mdp_agent_training.ipynb  train_qagent.py  train_qmem_agent.py
experiments/Env-55_247-edge_wrap_vertical-start_data_zone-source_27_62_radius2/: METADATA.json
experiments/Env-55_247-edge_wrap_vertical-start_odor_present-source_27_62_radius2/: METADATA.json
experiments/FSC/: eval.py  (+18 more)
olfactory_navigation/: __init__.py  agent.py  alt_env_draft.py  build_environment_gui.py  environment.py  simulation.py  test_setups.py  util.py  visualization.py
reference/: index.html
search/: search_index.json
site/: 404.html  gen_ref_pages.py  index.html  objects.inv
src/: __init__.py  agent.py  environment.py  simulation.py  test_setups.py
(+257 files in other folders)
