[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olfactory-navigation"
dynamic = ["version"]
authors = [{ name = "Arnaud Ruymaekers", email = "contact.aruymaekers@gmail.com" }]
description = "A package to simulate the process of olfactory navigation in various environment using pre-built agents or user-made agents."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

[project.urls]
Homepage = "https://pimlb.github.io/olfactory-navigation"

[tool.setuptools_scm]

[tool.setuptools]
packages = ["olfactory_navigation"]
include-package-data = true

[tool.setuptools.package-data]
"olfactory_navigation" = ["requirements.txt"]